--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,23 @@
-# Node.js
+# Node
 node_modules/
-pnpm-lock.yaml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# macOS
+# OS
 .DS_Store
-.AppleDouble
-.LSOverride
+Thumbs.db
 
-# Sass
-.sass-cache/
-*.css.map
-*.sass.map
-*.scss.map
+# Editor
+.vscode/
+.idea/
 
-# VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# Notablog cache
+.notablog/
 
-# Project
-TODO.md
-public/
-cache/
+# Temp
+*.tmp
 *.log
+
+# Optional (로컬 테스트용)
+.env
